syntax = "proto3";

package minimodal;

service MiniModal {
    rpc MountProject (MountProjectRequest) returns (MountProjectResponse);
    rpc RunFunction (RunFunctionRequest) returns (stream RunFunctionResponse);
}

message MountProjectRequest {
    repeated FileEntry files = 1;
}

message FileEntry {
    string file_path = 1;
    bytes content = 2;
}

message MountProjectResponse {
    oneof result {
        string success = 1;
        string error = 2;
    }
}

message name_and_type {
    string name = 1;
    string ty = 2;
}

message RunFunctionRequest {
    string function_id = 1;
    string serialized_inputs = 2;
    repeated name_and_type field_types = 3;
    string output_type = 4;
}

message RunFunctionResponse {
  oneof response {
    string log_line = 1;
    TaskResult result = 2;
  }
}

message TaskResult {
  bool success = 1;
  string message = 2;
}